objects/Employee__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>address</externalDeveloperName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <externalDeveloperName>birth</externalDeveloperName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>city</externalDeveloperName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>country</externalDeveloperName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>email</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalDeveloperName>employee</externalDeveloperName>
        <label>Employee ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <externalDeveloperName>extension</externalDeveloperName>
        <label>Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalDeveloperName>firstName</externalDeveloperName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <externalDeveloperName>hire</externalDeveloperName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <externalDeveloperName>homePhone</externalDeveloperName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalDeveloperName>lastName</externalDeveloperName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <externalDeveloperName>notes</externalDeveloperName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <externalDeveloperName>postalCode</externalDeveloperName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <externalDeveloperName>region</externalDeveloperName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <externalDeveloperName>sk</externalDeveloperName>
        <label>Reports To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>title</externalDeveloperName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_of_Courtesy__c</fullName>
        <externalDeveloperName>titleOfCourtesy</externalDeveloperName>
        <label>Title of Courtesy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Last_Name__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Birth_Date__c</columns>
        <columns>Hire_Date__c</columns>
        <columns>ExternalId</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Extension__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Title__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Employees</pluralLabel>
</CustomObject>